1997-09-14  Thomas E. Dickey  <dickey@clark.net>

	* user/link2rcs.man: -o option.

	* user/checkup.man: -a shows binary files too

	* user/copy.man: -U option

	* user/baseline.man, user/checkin.man, user/checkout.man, user/checkup.man, user/copy.man, user/ded.man, user/link2rcs.man, user/permit.man, user/rcsget.man, user/rcsput.man, user/vcs.man:
	my-email-address

	* user/makefile.in: renamed run_tests to run_test

	* src/vcs/test/run_test.sh, src/permit/test/case0.sh:
	renamed Makefile to makefile.in

	* src/link2rcs/test/case2.sh:
	add verbose option to partially match old results

	* src/link2rcs/test/case2.ref: add -v messages

	* src/link2rcs/test/case1.ref: new output shows a summary

	* src/copy/test/run_test.sh: rename Makefile to makefile.in

	* src/checkup/test/run_test.sh, src/checkout/test/run_test.sh:
	change Makefile to makefile.in

	* src/baseline/test/run_test.sh:
	mods for change of Makefile to makefile.in

	* bin/makefile.in: fix distclean rule so it doesn't delete this file

	* user/makefile.in: make mandir

	* bin/makefile.in: fixes for install-rule

	* src/baseline/makefile.in, src/checkin/makefile.in, src/checkout/makefile.in, src/checkup/makefile.in, src/copy/makefile.in, src/link2rcs/makefile.in, src/permit/makefile.in, src/vcs/makefile.in:
	install-rule

	* user/makefile.in: make install-rule

1997-09-13  Thomas E. Dickey  <dickey@clark.net>

	* bin/makefile.in: RCS_BASE

	* makefile.in: distclean rule

	* src/checkup/src/makefile.in: $B, $(TD_INC)

	* src/vcs/src/makefile.in, src/permit/src/makefile.in, src/link2rcs/src/makefile.in, src/copy/src/makefile.in, src/checkin/src/makefile.in, src/checkout/src/makefile.in, src/baseline/src/makefile.in:
	$B

	* src/checkin/makefile.in, src/checkout/makefile.in, src/checkup/makefile.in, src/copy/makefile.in, src/link2rcs/makefile.in, src/permit/makefile.in, src/vcs/makefile.in:
	$(LIB_DEPS)

	* src/baseline/makefile.in: $B
	$(LIB_DEPS)
