@@ -1,4 +1,4 @@
-# $Id: makefile.in,v 11.1 1997/09/13 16:32:49 tom Exp $
+# $Id: makefile.in,v 11.2 1997/09/28 20:15:39 tom Exp $
 # miscellaneous documentation
 
 
@@ -16,6 +16,5 @@ all:		$(SOURCES)
 clean:				; -$(RM) $(CLEAN)
 distclean:	clean
 run_test:
-sources:	$(SOURCES)
 install:
-deinstall:
+uninstall:
