@@ -1,4 +1,4 @@
-# $Id: makefile.in,v 11.1 1997/09/13 16:34:54 tom Exp $
+# $Id: makefile.in,v 11.2 1997/09/28 20:14:16 tom Exp $
 # make-file for testing RCS/sccs checkup utility
 
 THIS	= checkup
@@ -15,6 +15,5 @@ SOURCES	= makefile.in $(SCRIPTS)
 all:		$(SOURCES)
 clean:				; -$(RM) $(CLEAN)
 distclean:	clean
-sources:	$(SOURCES)
 lint.out:
 run_test:	$(SOURCES)	; $(RUN_TESTS)
