@@ -1,4 +1,4 @@
-# $Id: makefile.in,v 11.2 1997/09/13 17:26:25 tom Exp $
+# $Id: makefile.in,v 11.3 1997/09/28 20:14:16 tom Exp $
 # Make-file for RCS/vcs utility
 
 THIS	= vcs
@@ -33,7 +33,6 @@ install:	$(SOURCES) $B $(ALL)
 clean:				; -$(RM) $(CLEAN)
 distclean:	clean		; -$(RM) $(ALL)
 run_test:
-sources:	$(SOURCES)
 
 ####### (Details of Productions) ###############################################
 $B:				; mkdir $@
